# banned-apps

./: README.md  pyproject.toml
banned_apps/: admin.py  models.py
banned_apps/migrations/: 0001_initial.py
banned_apps/templates/banned_apps/: banned_apps.html
