[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "banned_apps"
version = "0.1.0"
description = "Standalone Django app for managing banned applications."
authors = [
    { name = "Your Name or Org", email = "you@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "Django>=3.2",
]

classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
]


[project.urls]
Homepage = "https://github.com/Nachiket-Roy/banned-apps"
Source = "https://github.com/Nachiket-Roy/banned-apps"

